# terrain-generation-thesis

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config_example.json  run.sh
doc/: notes.md
examples/: bing.json  osm.json  osm_brno.json
src/gui/: CMakeLists.txt  DevelopWindow.cpp  DevelopWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindow.ui.autosave  MeshGenerators.cpp  MeshGenerators.h  StaticFunctions.cpp  StaticFunctions.h  glwrapper.cpp  glwrapper.h  main.cpp
src/gui/assets/shaders_gui/: CMakeLists.txt  Shaders.cpp  Shaders.h
src/gui/assets/shaders_gui/develop/: basic.fs.shader  basic.vs.shader  plane.fs.shader  plane.vs.shader
src/gui/assets/shaders_gui/include/skybox/: skybox_fs.shader.out  skybox_vs.shader.out
src/gui/assets/shaders_gui/include/ssao/: blur_fs.shader.out
src/gui/assets/shaders_gui/lightning/: lightning_fs.shader
src/gui/assets/shaders_gui/skybox/: skybox_fs.shader  skybox_vs.shader
src/gui/assets/shaders_gui/ssao/: ssao_fs.shader
src/gui/effects/: SSAO.cpp  SSAO.h  Skybox.cpp  Skybox.h
src/gui/opengl/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h
src/gui/renderer/: Camera.cpp  Camera.h  GBuffer.cpp  GBuffer.h  Renderer.cpp  Renderer.h  SSAO.cpp  SSAO.h  Scene.cpp  Scene.h  Scene3D.cpp  Scene3D.h  SceneObject.cpp  SceneObject.h  Skybox.cpp  Skybox.h
src/gui/renderer/input/: InputHandler.cpp  InputHandler.h
src/gui/renderer/scene_objects/: Camera.cpp  Camera.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Uniform.cpp  Uniform.h
src/gui/shaders/: CMakeLists.txt  Shaders.h  fragment.shader  vertex.shader
src/gui/shaders_gui/: CMakeLists.txt  Shaders.cpp  Shaders.h
src/gui/shaders_gui/include/home/tomas/xoplat01/src/gui/assets/shaders_gui/lightning/: lightning_fs.shader.out
src/gui/shaders_gui/include/home/tomas/xoplat01/src/gui/assets/shaders_gui/ssao/: ssao_fs.shader.out
src/gui/shaders_gui/include/lightning/: lightning_fs.shader.out  lightning_vs.shader.out
src/gui/shaders_gui/include/skybox/: skybox_fs.shader.out
src/gui/shaders_gui/include/ssao/: ssao_fs.shader.out
src/gui/shaders_gui/lightning/: lightning_fs.shader  lightning_vs.shader
src/gui/shaders_gui/skybox/: skybox_fs.shader
src/gui/shaders_gui/ssao/: blur_fs.shader  ssao_fs.shader
src/gui/ui/: BaseWidget.cpp  BaseWidget.h  Map.cpp  Map.h  mapview.cpp  mapview.h  mapview.ui  rendererlayout.cpp  rendererlayout.h  rendererlayout.ui  rendererlayout.ui.autosave
src/gui/views/: Map.cpp  mapview.cpp  mapview.h  mapview.ui  rendererlayout.cpp  rendererlayout.h  rendererlayout.ui
src/gui/views/controls/: CameraControl.cpp  CameraControl.h  CameraControl.ui  QDataTreeItem.h
src/gui/windows/: DevelopWindow.cpp  DevelopWindow.h  DevelopWindow.ui  MainWindow.cpp  MainWindow.h  RenderOptions.cpp  RenderOptions.h  RenderOptions.ui
src/lib/: CMakeLists.txt  Config.h  ConfigReader.cpp  ConfigReader.h  CsvDecoder.cpp  CsvDecoder.h  Helper.cpp  Helper.h  JsonHelper.h  Logger.cpp  Logger.h  MapGenerator.cpp  MapGenerator.h  VertexData.cpp  VertexData.h  test.cpp  test.h
src/lib-run/: CMakeLists.txt  main.cpp
src/lib/api/: ApiBase.cpp  ApiBase.h  ApiBase_impl.h  BingApi.cpp  BingApi.h  OpenStreetMapApi.cpp  OpenStreetMapApi.h
src/lib/api/models/bing/: ElevationData.cpp  ElevationData.h  ElevationResult.h
src/lib/api/models/openstreetmap/: MetadataResult.h  OSMData.cpp  OSMData.h
src/lib/common/: AreaOnMap.cpp  AreaOnMap.h  GeneratorOptions.h  LandTypeGenerator.cpp  LandTypeGenerator.h
src/lib/config/: Config.h  ConfigReader.cpp  ConfigReader.h  LibConfig.h
src/lib/generators/buildings/: BuildingsGenerator.cpp  BuildingsGenerator.h
src/lib/generators/landtype/: AreaOnMap.cpp  AreaOnMap.h  LandTypeGenerator.cpp  LandTypeGenerator.h
src/lib/generators/surface/: SurfaceGenerator.cpp  SurfaceGenerator.h
src/lib/generators/vegetation/: ObjectLoader.cpp  ObjectLoader.h  PositionSampler.cpp  PositionSampler.h  VegetationGenerator.cpp  VegetationGenerator.h
src/lib/models/bing/: ElevationData.cpp  ElevationData.h  ElevationResult.cpp  ElevationResult.h
src/lib/models/openstreetmap/: MetadataResult.h  OSMData.cpp  OSMData.h
src/lib/scene/: Draw.cpp  Draw.h  Model.cpp  Model.h  Point.cpp  Point.h  Program.cpp  Program.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureArray.cpp  TextureArray.h  Uniform.cpp  Uniform.h  Vertex.cpp  Vertex.h
src/lib/shaders/: CMakeLists.txt  Shaders.h  fragment.shader  vertex.shader
src/lib/shaders/buildings/: buildings_fs.glsl  buildings_fs.shader  buildings_vs.shader
src/lib/shaders/common/: main_vs.glsl  main_vs.shader
src/lib/shaders/ground/: ground_es.glsl  ground_es.shader  ground_fs.glsl  ground_fs.shader  ground_tcs.glsl  ground_tcs.shader  ground_vs.shader
src/lib/shaders/heightmap/: heightmap_es.shader  heightmap_fs.shader
src/lib/shaders/trees/: tree_fs.shader  tree_vs.shader
text/: projekt-01-kapitoly-chapters.tex  projekt-20-literatura-bibliography.bib  projekt-30-prilohy-appendices.tex  projekt.tex
